# komo

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: api_reference.md
examples/alarm/: CMakeLists.txt  main.c
src/: event_queue.c  event_queue.h  fsm.c  fsm.h  fsm_debug.c  fsm_debug.h  fsm_types.h
